feat: adds tsconfig package

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --no-cache --parallel --continue",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build && changeset publish"
+    "release": "turbo run build && changeset publish",
+    "release-local": "yarn changeset && yarn version-packages"
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
