--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
+    "@commitlint/cli": "^17.0.3",
+    "@kopplin/commitlint": "*",
+    "husky": "^8.0.1",
     "turbo": "latest"
   }
 }
