--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^17.0.3",
     "@kopplin/commitlint": "*",
+    "@kopplin/eslint": "*",
+    "eslint": "^8.19.0",
     "husky": "^8.0.1",
     "turbo": "latest"
   }
