--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "workspaces": [
-    "tools/*"
+    "tools/*",
+    "packages/*"
   ],
   "scripts": {
     "build": "turbo run build",
